--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,22 @@
 version: "3.8"
 
 services: 
-  db: 
+  dev-db: 
     image: postgres
     restart: always
     ports: 
       - "5432:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: pass123
+      POSTGRES_DB: nest
+    networks:
+      - backend
+  test-db: 
+    image: postgres
+    restart: always
+    ports: 
+      - "5433:5432"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: pass123
