--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,17 @@ services:
       POSTGRES_DB: nest
     networks:
       - backend
+  backup-db: 
+    image: postgres
+    restart: always
+    ports: 
+      - "5434:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: pass123
+      POSTGRES_DB: nest
+    networks:
+      - backend
   test-db: 
     image: postgres
     restart: always
